--- a/default/data/ui/views/8_oscam_live_view.xml
+++ b/default/data/ui/views/8_oscam_live_view.xml
@@ -10,28 +10,36 @@
       </default>
     </input>
     <input type="dropdown" token="Host" searchWhenChanged="true">
+      <label>Host</label>
       <search>
-        <query>sourcetype=oscam |
-          top host</query>
+        <query>sourcetype=oscam 
+            client=$Client$
+            server=$Server$
+            ecm=$Status$|
+            top limit=0 host | 
+            eval info=host." (".count.")"</query>
         <earliest>$global_time.earliest$</earliest>
         <latest>$global_time.latest$</latest>
       </search>
       <choice value="*">Any</choice>
-      <fieldForLabel>host</fieldForLabel>
+      <fieldForLabel>info</fieldForLabel>
       <fieldForValue>host</fieldForValue>
       <default>*</default>
     </input>
     <input type="dropdown" token="Client" searchWhenChanged="true">
+      <label>Client</label>
       <search>
         <query>sourcetype=oscam
-          client="*"
-          host=$Host$ |
-          top limit=0 client</query>
+            host=$Host$
+            server=$Server$
+            ecm=$Status$ |
+            top limit=0 client |
+            eval info=client." (".count.")"</query>
         <earliest>$global_time.earliest$</earliest>
         <latest>$global_time.latest$</latest>
       </search>
       <choice value="*">Any</choice>
-      <fieldForLabel>client</fieldForLabel>
+      <fieldForLabel>info</fieldForLabel>
       <fieldForValue>client</fieldForValue>
       <default>*</default>
     </input>
@@ -39,25 +47,32 @@
       <label>Reader/Proxy(Server)</label>
       <search>
         <query>sourcetype=oscam
-          server="*"
-          host=$Host$ |
-          top limit=0 server</query>
+            host=$Host$
+            client=$Client$
+            ecm=$Status$ |
+            top limit=0 server |
+            eval info=server." (".count.")"</query>
         <earliest>$global_time.earliest$</earliest>
         <latest>$global_time.latest$</latest>
       </search>
       <choice value="*">Any</choice>
-      <fieldForLabel>server</fieldForLabel>
+      <fieldForLabel>info</fieldForLabel>
       <fieldForValue>server</fieldForValue>
       <default>*</default>
     </input>
     <input type="dropdown" token="Status" searchWhenChanged="true">
+      <label>Status</label>
       <search>
-        <query>client=* |
-          top limit=0 ecm</query>
+        <query>sourcetype=oscam
+            host=$Host$
+            client=$Client$
+            server=$Server$ |
+            top limit=0 ecm |
+            eval info=ecm." (".count.")"</query>
         <earliest>$global_time.earliest$</earliest>
         <latest>$global_time.latest$</latest>
       </search>
-      <fieldForLabel>ecm</fieldForLabel>
+      <fieldForLabel>info</fieldForLabel>
       <fieldForValue>ecm</fieldForValue>
       <choice value="*">Any</choice>
       <default>*</default>
@@ -96,12 +111,14 @@
       <table>
         <title>Other info (clients/readers reconnecting, load balance statistics, emm handling, reload info +++)</title>
         <search>
-          <query>sourcetype=oscam             host=$Host$             NOT ecm=* |             fields _time, host, server, client, eventtype |             fields - _raw</query>
+          <query>sourcetype=oscam
+          host=$Host$
+          NOT ecm=* |
+          fields _time, host, server, client, eventtype |
+          fields - _raw</query>
           <earliest>$global_time.earliest$</earliest>
           <latest>$global_time.latest$</latest>
         </search>
-        <option name="wrap">undefined</option>
-        <option name="rowNumbers">undefined</option>
         <option name="drilldown">row</option>
         <option name="dataOverlayMode">none</option>
         <option name="count">10</option>
