--- a/default/data/ui/views/7_oscam_clients_ecm_requests.xml
+++ b/default/data/ui/views/7_oscam_clients_ecm_requests.xml
@@ -10,14 +10,17 @@
       </default>
     </input>
     <input type="dropdown" token="Host" searchWhenChanged="true">
+      <label>Host</label>
       <search>
-        <query>sourcetype=oscam |
-          top host</query>
+        <query>sourcetype=oscam
+          ecm=found OR ecm=cache*|
+          top limit=0 host | 
+          eval info=host." (".count.")"</query>
         <earliest>$global_time.earliest$</earliest>
         <latest>$global_time.latest$</latest>
       </search>
       <choice value="*">Any</choice>
-      <fieldForLabel>host</fieldForLabel>
+      <fieldForLabel>info</fieldForLabel>
       <fieldForValue>host</fieldForValue>
       <default>*</default>
     </input>
@@ -40,7 +43,7 @@
             addtotals fieldname=Total |
             table client Total * |
             sort - Total |
-            head 25 |
+            head 15 |
             fields - Total</query>
           <earliest>$global_time.earliest$</earliest>
           <latest>$global_time.latest$</latest>
