--- a/default/data/ui/views/6_oscam_channels_not_in_oscamsrvid.xml
+++ b/default/data/ui/views/6_oscam_channels_not_in_oscamsrvid.xml
@@ -10,14 +10,19 @@
       </default>
     </input>
     <input type="dropdown" token="Host" searchWhenChanged="true">
+      <label>Host</label>
       <search>
-        <query>sourcetype=oscam |
-          top host</query>
+        <query>sourcetype=oscam
+          ecm=found
+          OR ecm=cache*
+          NOT channel="*" | 
+          top limit=0 host | 
+          eval info=host." (".count.")"</query>
         <earliest>$global_time.earliest$</earliest>
         <latest>$global_time.latest$</latest>
       </search>
       <choice value="*">Any</choice>
-      <fieldForLabel>host</fieldForLabel>
+      <fieldForLabel>info</fieldForLabel>
       <fieldForValue>host</fieldForValue>
       <default>*</default>
     </input>
@@ -26,7 +31,17 @@
     <panel>
       <chart>
         <search>
-          <query>sourcetype=oscam             ecm=found OR ecm=cache* NOT channel="*"              host=$Host$ |             eval oscam_channel = caid.":".sid."@".pvid |              eval info=client."-".host |             chart count over oscam_channel by info limit=0 |             addtotals fieldname=Total |             table oscam_channel Total * |             sort - Total |             head 10 |             fields - Total</query>
+          <query>sourcetype=oscam
+          ecm=found OR ecm=cache* NOT channel="*"
+          host=$Host$ |
+          eval oscam_channel = caid.":".sid."@".pvid |
+          eval info=client."-".host |
+          chart count over oscam_channel by info limit=0 |
+          addtotals fieldname=Total |
+          table oscam_channel Total * |
+          sort - Total |
+          head 10 |
+          fields - Total</query>
           <earliest>$global_time.earliest$</earliest>
           <latest>$global_time.latest$</latest>
         </search>
